--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,16 @@
 	<groupId>com.academy</groupId>
 	<artifactId>Teos</artifactId>
 	<name>Teos</name>
-	<packaging>war</packaging>
+    <packaging>pom</packaging>
 	<version>1.0</version>
 	<properties>
 		<java.version>6</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework-version>3.1.0.RELEASE</org.springframework-version>
+		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
 		<aspectj.version>1.7.0.RC1</aspectj.version>
 		<slf4j.version>1.6.4</slf4j.version>
-        <spring.version>3.1.0.RELEASE</spring.version>
+        <project.name>Teos</project.name>
+        <spring.version>3.2.0.RELEASE</spring.version>
         <spring-security.version>3.1.0.RELEASE</spring-security.version>
 	</properties>
 	<repositories>
@@ -375,7 +376,7 @@
     <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-jsp</artifactId>
-            <version>2.2.2</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
@@ -397,11 +398,6 @@
         	<artifactId>spring-integration-xml</artifactId>
         	<version>2.1.0.RELEASE</version>
         </dependency>
-        <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-oxm</artifactId>
-			<version>3.0.5.RELEASE</version>
-		</dependency>
 		<!-- Uses Castor for XML -->
 		<dependency>
 			<groupId>org.codehaus.castor</groupId>
