--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 	<properties>
 		<java.version>6</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
 		<aspectj.version>1.7.0.RC1</aspectj.version>
 		<slf4j.version>1.6.4</slf4j.version>
         <project.name>Teos</project.name>
@@ -443,9 +442,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>2.2.9</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.173</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
