--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,7 +1,7 @@
 #Updated at Sun Jun 24 17:58:29 CAT 2012
 #Sun Jun 24 17:58:29 CAT 2012
 database.driverClassName=org.h2.Driver
-#database.url=jdbc\:h2\:file\:C:/Temp/DB/teos/teos
-database.url=jdbc\:h2\:file\:/tmp/DB/teos/teos
+database.url=jdbc\:h2\:file\:C:/Temp/DB/teos/teos
+#database.url=jdbc\:h2\:file\:/tmp/DB/teos/teos
 database.username=sa
 database.password=
